tests/fsharp/typecheck/sigs/neg43.bsl

neg43.fs(11,6,11,8): typecheck error FS0294: The type definitions for type 'DU' in the signature and implementation are not compatible because the implementation says this type may use nulls as a representation but the signature does not
